2009-08-07  Bruno Haible  <bruno@clisp.org>

	* spvw_sigsegv.d (stackoverflow_handler_continuation) [I80386]: Make it
	compile with libsigsegv 2.7.

2009-08-09  Sam Steingold  <sds@gnu.org>

	* configure: remove the --install option; people should be careful
	with su(1)

2009-08-09  Sam Steingold  <sds@gnu.org>

	* modules/regexp/configure.in, modules/syscalls/configure.in:
        * modules/wildcard/configure.in:
	AM_INIT_AUTOMAKE must come after AC_CONFIG_AUX_DIR

2009-08-07  Sam Steingold  <sds@gnu.org>

	* modules/regexp/configure.in, modules/syscalls/configure.in:
        * modules/wildcard/configure.in, configure.in: pass ([no-define])
	to AM_INIT_AUTOMAKE to avoid defining PACKAGE & VERSION (we
	already have PACKAGE_NAME and PACKAGE_VERSION defined by AC_INIT)

2009-08-07  Bruno Haible  <bruno@clisp.org>

	* configure: Don't leave abazonk files when $exex_prefix and $prefix
	are different.

2009-08-07  Sam Steingold  <sds@gnu.org>

	* modules/regexp/Makefile.in (regexi.o): add -Igllib and depend on gllib
	* modules/syscalls/Makefile.in (calls.o): ditto
	* modules/wildcard/Makefile.in (wildcard.o): ditto

2009-08-06  Sam Steingold  <sds@gnu.org>

	* configure, makemake.in (with_dynamic_modules):
	"yes" is now the default

2009-08-06  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (gnulib-imported): import uname into syscalls
	* modules/syscalls/calls.c (uname): implement unconditionally
	* modules/syscalls/posix.lisp (uname): export unconditionally
	* modules/syscalls/configure.in: call gl_FUNC_UNAME and
	gl_SYS_UTSNAME_MODULE_INDICATOR([uname]) and do not check for
	uname and <sys/utsname.h>
	* modules/syscalls/gllib/alignof.h:
	* modules/syscalls/gllib/close-hook.c:
	* modules/syscalls/gllib/close-hook.h:
	* modules/syscalls/gllib/errno.in.h:
	* modules/syscalls/gllib/gethostname.c:
	* modules/syscalls/gllib/sockets.c:
	* modules/syscalls/gllib/sockets.h:
	* modules/syscalls/gllib/sys_socket.in.h:
	* modules/syscalls/gllib/sys_utsname.in.h: